# RLEF-code

./: .coverage  .gitignore  .pre-commit-config.yaml  accelerate_config.yaml  clean_and_optimize_dataset.py  debug_failures.py  grpc_reward_server.py  pyproject.toml  reward.proto  run _pipeline.py  run_pipeline.py  setup.sh  setup_cloud.sh  test_runner.py
.github/workflows/: ci.yaml
Fundamentals/: train__openrlhf.yaml
Fundamentals/RLEF/: env.py  eval_single.py  reward_pb2.py  reward_pb2_grpc.py  tools.py  trajectory.py
Fundamentals/scripts/: cloud_setup2.sh  overnight_runs.sh  run_eval.sh  run_grpo_docker.sh  run_train.sh
Fundamentals/tests/: test_eval.py  test_eval_single.py  test_single_turn_prompt.py  test_tools.py  test_train.py  test_trajectory.py
configs/: train.yaml
notebooks/: 01_training_curves.py  02_eval_analysis.py  03_reward_hacking.py  04_ablations.py
scripts/: cloud_setup.sh  cloud_setup2.sh  download_apps.sh  overnight_runs.sh  run_eval.sh  run_grpo_docker.sh  run_h200_agent.sh  run_openrlhf.sh  run_train.sh
src/: __init__.py
src/rlef/: ablations.py  agent.py  data.py  eval.py  evaluate.py  grpc_reward_server.py  prepare_openrlhf_data.py  prompt.py  reward.py  reward_bridge.py  single_turn_prompt.py  split_dataset.py  tools.py  train.py  train_agent.py
tests/: conftest.py  test_agent.py  test_data.py  test_environment.py  test_eval.py  test_grpc_reward.py  test_notebooks.py  test_prompt.py  test_reward.py  test_train.py  test_trajectory.py
