[tool.poetry]
name = "rlef"
version = "0.1.0"
description = "Reinforcement Learning from Execution Feedback (RLEF)"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "rlef", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.4.0"
vllm = "^0.6.0"
transformers = "4.45.2"  # Locked specifically to prevent tokenizer/checkpoint mismatch
peft = "^0.12.0"
wandb = "^0.17.0"
pyyaml = "^6.0.1"
ray = "^2.34.0"          # Required by vLLM for stable memory partitioning
numpy = "<2.0.0"
scipy = "<=1.13.1"
networkx = "<=3.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.1"
pre-commit = "^4.6.0"
pandas = "<3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
addopts = "--tb=short -v"
markers = [
    "unit: Pure logic tests isolated from hardware and external data",
    "integration: Full compilation sandbox tests requiring subprocesses"
]
